--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,12 @@ form {
     position: relative;
     float: left;
     margin: 20px 20px 25px;
-    overflow: auto;            
+    overflow: auto;  
+    transition: all .2s ease-in-out;          
+}
+.gallery:hover {
+    transform: scale(1.1);
+    
 }
 #portfolio {
     margin: auto;
